--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
         run: |
           yum update -y && \
           yum install -y epel-release && \
-          yum update -y && \
-          yum install -y singularity
+          wget https://github.com/sylabs/singularity/releases/download/v3.11.4/singularity-ce-3.11.4-1.el7.x86_64.rpm \
+          rpm -i singularity-ce-3.11.4-1.el7.x86_64.rpm
 
       - name: Check out code for the container builds
         uses: actions/checkout@v2
