--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Check out code for the container builds
         uses: actions/checkout@v2
 
-      - name: Build Container
-        run: |
-           singularity build baysor.sif baysor.def
+      # - name: Build Container
+      #   run: |
+      #      singularity build baysor.sif baysor.def
 
       # - name: Use the Upload Artifact GitHub Action
       #   uses: actions/upload-artifact@v2
@@ -38,3 +38,5 @@ jobs:
           singularity remote add Sylabs cloud.sylabs.io 
           singularity remote use Sylabs
           singularity push -U baysor.sif library://mheeg/spatial-tools/baysor:latest     
+        env:
+          SINGULARITY_DOCKER_PASSWORD: ${{ secrets.SYLABS_AUTH_TOKEN }}
