--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,25 +6,25 @@ on:
       - "v*.*.*"
 
 jobs:
-    docker:
-        runs-on: ubuntu-latest
-        steps:
-          - name: Set up QEMU
-            uses: docker/setup-qemu-action@v2
-          - name: Set up Docker Buildx
-            uses: docker/setup-buildx-action@v2
-          - name: Login to Docker Hub
-            uses: docker/login-action@v2
-            with:
-              username: ${{ secrets.DOCKERHUB_USERNAME }}
-              password: ${{ secrets.DOCKERHUB_TOKEN }}
-          - name: Set output
-            id: vars
-            run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
-          - name: Build and push
-            uses: docker/build-push-action@v4
-            env:
-                RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
-            with:
-              push: true
-              tags: user/app:$RELEASE_VERSION
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set output
+        id: vars
+        run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        env:
+            RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+        with:
+          push: true
+          tags: maximilianheeg/baysor:${{ steps.vars.outputs.tag }}
